# static-analysis-template-for-django

./: .gitignore  LICENSE  README.md
projects/: .env  .env.local  .env.test  .flake8  .pre-commit-config.yaml  manage.py  pyproject.toml
projects/commons/: tests.py  url_routers.py  utils.py
projects/mocks/: serializers.py  tests.py  urls.py  views.py
projects/projects/: asgi.py  urls.py  views.py  wsgi.py
projects/projects/management/commands/: generate_secret_key.py
projects/projects/settings/: base.py  local.py  test.py
